[package]
name = "rrbot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orca = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
lazy_static = "1.4.0"
fancy-regex = "*"
failure = "*"
config = "0.11"
